force-app/main/default/objects/KicksawEng__IntegrationExecution__c/fields/Max_Retries_Reached__c.field-meta.xml
<CustomField>
    <fullName>Max_Retries_Reached__c</fullName>
    <formula>Retries_Attempted__c &gt;=  KicksawEng__Integration__r.Maximum_Retries__c</formula>
    <label>Max Retries Reached</label>
    <type>Checkbox</type>
</CustomField>