force-app/main/default/objects/KicksawEng__IntegrationExecution__c/fields/Next_Retry_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Next_Retry_Scheduled__c</fullName>
    <label>Next Retry Scheduled</label>
    <type>DateTime</type>
</CustomField>