force-app/main/default/objects/KicksawEng__IntegrationExecution__c/fields/Parent_Execution__c.field-meta.xml
<CustomField>
    <fullName>Parent_Execution__c</fullName>
    <formula>Retry_From__c == null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Execution</label>
    <type>Checkbox</type>
</CustomField>