force-app/main/default/objects/KicksawEng__IntegrationExecution__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>If the integration execution failed and if it only has 1 record id, it will populate the record Id. This allows a formula to be used to link to the record.</description>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>