force-app/main/default/objects/KicksawEng__IntegrationExecution__c/fields/Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_Link__c</fullName>
    <formula>IF(
    ISBLANK(Record_Id__c),
    NULL,
    HYPERLINK(&quot;/&quot; + Record_Id__c, Record_Id__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>