force-app/main/default/objects/KicksawEng__IntegrationExecution__c/fields/Retries_Attempted__c.field-meta.xml
<CustomField>
    <fullName>Retries_Attempted__c</fullName>
    <label>Retries Attempted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>