force-app/main/default/objects/KicksawEng__IntegrationExecution__c/fields/Retry_From__c.field-meta.xml
<CustomField>
    <fullName>Retry_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Integration Execution Record that this is a retry of</inlineHelpText>
    <label>Retry From</label>
    <referenceTo>KicksawEng__IntegrationExecution__c</referenceTo>
    <relationshipLabel>Integration Executions</relationshipLabel>
    <relationshipName>Integration_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>