force-app/main/default/objects/KicksawEng__IntegrationExecution__c/fields/Retry_Ids__c.field-meta.xml
<CustomField>
    <fullName>Retry_Ids__c</fullName>
    <inlineHelpText>Comma-separated list of Record Ids to Retry</inlineHelpText>
    <label>Retry Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>